--- a/core/pom.xml
+++ b/core/pom.xml
@@ -46,6 +46,10 @@
             <groupId>liga.medical</groupId>
             <artifactId>monitoring-dto</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
     </dependencies>
 
