--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
 
-spring.rabbitmq.host=rabbit
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
